--- a/en/code/tcc-rockstar/end.html
+++ b/en/code/tcc-rockstar/end.html
@@ -8,7 +8,7 @@
   </head>
   <body id="end">
     <h1>STOP AND THINK</h1>
-    <img alt="Hacker face" src=""><br><br>
+    <img alt="Hacker face" src="end_image.png"><br><br>
     <p>You freely shared your personal data with us. Just think what a cyber criminal could do with this data!</p>
     <p>Disclaimer: This program aims to highlight the dangers of freely submitting your personal data. None of your personal data has been stored by this program.</p>
   </body>
