--- a/en/code/tcc-rockstar/index.html
+++ b/en/code/tcc-rockstar/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Which rockstar are you?</h1>
-    <img alt="Rockstar guitarist" src="">
+    <img alt="Rockstar guitarist" src="guitarist.png">
     <p>Hey Dude, wanna find out what your Rockstar name is?</p>
     <p>Click the start button below, answer me a few questions and I'll tell you what your Rockstar name is!</p>
     <p id="submit"><a href="questions.html">Start</a></p>
